# homework_11_web

./: .env  main.py  pyproject.toml  schemas.py  test.db
conf/: config.py
db/: config.ini  connect_db.py  models.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 32a15a8e0f2a_new.py  5d8f254b0b26_.py  6dd93a8ec9b3_init.py  bc531ec88ef4_confirmed_par.py
postgres-data/: postmaster.pid
postgres-data/base/13481/: 1247  1249  16384  16387  16389  16395  16397  16399  16405  16406  16408  2224  2579  2604  2606  2620  2659  2662  2663  2664  2665  2666  2667  2701  2702  2703  2704  5002  pg_internal.init
postgres-data/global/: pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  global.stat
repository/: contacts.py  users.py
routes/: auth.py  contacts.py  users.py
services/: auth.py  email.py
services/templates/: email_template.html
tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
