[tool.poetry]
name = "homework-11-web"
version = "0.1.0"
description = ""
authors = ["TurMod <turbo.moderator@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_11_web"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
alembic = "^1.12.0"
pydantic = {extras = ["email"], version = "^2.3.0"}
pydantic-extra-types = "^2.1.0"
phonenumbers = "^8.13.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
