[tool.poetry]
name = "homework-11-web"
version = "0.1.0"
description = ""
authors = ["TurMod <turbo.moderator@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_11_web"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
alembic = "^1.12.0"
pydantic = {extras = ["email"], version = "^2.3.0"}
pydantic-extra-types = "^2.1.0"
phonenumbers = "^8.13.20"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
fastapi-mail = "^1.4.1"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.36.0"
pytest = "^7.4.2"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
